# CloudOptima-An-Optimised-Resource-Allocation-System

./: .gitignore  CMakeLists.txt  README.md  addtaskdialog.cpp  addtaskdialog.h  addtaskdialog.ui  graphdialog.cpp  graphdialog.h  graphdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  statsdialog.cpp  statsdialog.h  statsdialog.ui
